fix align follow

--- a/css/style.css
+++ b/css/style.css
@@ -265,12 +265,16 @@ footer {
 }
 footer .follow {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
+  gap: 10px;
 }
 footer .follow h4 {
-  margin: 5px 0;
+  display: inline-block;
+  line-height: 1.2rem;
+  font-size: 1.2rem;
+  margin: 0;
   padding: 0;
 }
 footer a {
