--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -8,13 +8,17 @@ footer {
 
   .follow {
     h4 {
-      margin: 5px 0;
+      display: inline-block;
+      line-height: 1.2rem;
+      font-size: 1.2rem;
+      margin: 0;
       padding:0;
     }
     display: flex;
-    flex-direction: column;
+    flex-direction: row;    
     justify-content: center;
     align-items: center;
+    gap: 10px;
   }
 
   a {
@@ -24,7 +28,7 @@ footer {
 
   .container {
     display: flex;
-    flex-direction: row;
+    flex-direction: row;    
     padding:0;
     padding-top: 5px;
     padding-bottom: $space-multiplier;
